--- a/contracts/liquidity_hub/fee_collector/Cargo.toml
+++ b/contracts/liquidity_hub/fee_collector/Cargo.toml
@@ -35,7 +35,7 @@ schemars.workspace = true
 semver.workspace = true
 serde.workspace = true
 thiserror.workspace = true
-white-whale.workspace = true
+NICO_10.workspace = true
 pool-network.workspace = true
 vault-network.workspace = true
 cosmwasm-schema.workspace = true
