--- a/contracts/liquidity_hub/vault-network/vault_router/Cargo.toml
+++ b/contracts/liquidity_hub/vault-network/vault_router/Cargo.toml
@@ -31,7 +31,7 @@ serde.workspace = true
 pool-network.workspace = true
 thiserror.workspace = true
 vault-network.workspace = true
-white-whale.workspace = true
+NICO_10.workspace = true
 cosmwasm-schema.workspace = true
 
 [dev-dependencies]
