--- a/contracts/liquidity_hub/pool-network/terraswap_factory/Cargo.toml
+++ b/contracts/liquidity_hub/pool-network/terraswap_factory/Cargo.toml
@@ -39,5 +39,5 @@ cw2.workspace = true
 thiserror.workspace = true
 semver.workspace = true
 pool-network.workspace = true
-NICO_10.workspace = true
+nico_teen.workspace = true
 cosmwasm-schema.workspace = true
